--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
+include LICENSE
+recursive-include facsimile *.txt
+recursive-include twentyc.rpc *.py
 include facsimile/VERSION
-include facsimile/requirements.txt
-include README.md
