--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,23 +24,22 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.6.1,<4.0"
-six = ">=1.10,<2.0"
 requests = ">=2.10.0"
 
 [tool.poetry.dev-dependencies]
-# test
+# testing
 codecov = ">=2.0.5,<3"
 coverage = ">=4.1,<5"
-pytest = ">=2.9.2,<4"
-pytest-cov = ">=2.3.0,<3"
-tox = ">=2.3.1,<3"
-pre-commit = "^2.14.0"
+pytest = "^6.0.1"
+pytest-cov = "*"
 
-# lint
-bandit = "^1.6.2"
-black = "^20.8b1"
+# linting
+black = { version = ">=20", allow-prereleases = true }
 isort = "^5.7.0"
 flake8 = "^3.8.4"
+mypy = "^0.812"
+pre-commit = "^2.13"
+pyupgrade = "^2.19.4"
 
 # docs
 markdown = "*"
@@ -48,9 +47,10 @@ markdown-include = ">=0.5,<1"
 mkdocs = ">=1.0.0,<2.0.0"
 
 # ctl
-ctl = "^1.0.0"
+ctl = "^1"
 jinja2 = "^2.11.2"
-tmpl = "^0.3.0"
+tmpl = "^1"
+twine = "^3.3.0"
 
 [tool.poetry.plugins."markdown.extensions"]
 pymdgen = "pymdgen.md:Extension"
