--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 
 [tox]
-envlist = py27,py34,py35
+envlist = py36,py37,py38,py39
 
 [testenv]
 passenv = CI TRAVIS*
@@ -9,6 +9,20 @@ commands = py.test --cov-report=term-missing --cov-report=xml --cov={envsitepack
 deps = -r{toxinidir}/facsimile/requirements.txt
        -r{toxinidir}/facsimile/requirements-test.txt
 
+[flake8]
+extend-ignore = E203, E266, E501
+exclude =
+    .git,
+    .venv,
+    .tox,
+    __pycache__,
+    build,
+    dist
+# line length is intentionally set to 80 here because black uses Bugbear
+# See https://github.com/psf/black/blob/master/docs/the_black_code_style.md#line-length for more details
+max-line-length = 80
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
+
 [pytest]
 norecursedirs = .facsimile data gen .tox
-
