--- a/CHANGELOG.yaml
+++ b/CHANGELOG.yaml
@@ -1,12 +1,9 @@
 Unreleased:
-  added:
-    - linting
-    - moved to github workflows
+  added: []
   fixed: []
   changed: []
   deprecated: []
-  removed:
-    - python 2 support
+  removed: []
   security: []
 0.4.0:
   added:
@@ -16,3 +13,9 @@ Unreleased:
 0.3.5:
   changed:
   - updated requirements
+1.0.0:
+  added:
+  - linting
+  - moved to github workflows
+  removed:
+  - python 2 support
